...

    <View
      android:id="@+id/view_divider3"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/component_color_shared_divider_color"
      app:layout_constraintBottom_toTopOf="@id/feature_flags_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/force_crash_text_view" />

    <TextView
      android:id="@+id/feature_flags_text_view"
...

    <View
      android:id="@+id/view_divider4"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/component_color_shared_divider_color"
      app:layout_constraintBottom_toTopOf="@id/platform_parameters_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/feature_flags_text_view" />

    <TextView
      android:id="@+id/platform_parameters_text_view"
...
