<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.devoptions.DeveloperOptionsViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/developer_options_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_tertiary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="80dp"
    android:scrollbars="none"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:list="@{viewModel.developerOptionsList}" />
</layout>
