<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.devoptions.devoptionsitemviewmodel.DeveloperOptionsTestParsersViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
      android:id="@+id/debug_parsers_text_view"
      style="@style/Heading5ViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_item_background_solid_color"
      android:paddingStart="16dp"
      android:paddingTop="20dp"
      android:paddingEnd="16dp"
      android:paddingBottom="20dp"
      android:text="@string/developer_options_test_parsers_label"
      android:textColor="@color/component_color_shared_active_text_color" />

    <TextView
      android:id="@+id/math_expressions_text_view"
      style="@style/Subtitle1ViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_screen_tertiary_background_color"
      android:onClick="@{(v) -> viewModel.onMathExpressionsClicked()}"
      android:paddingStart="16dp"
      android:paddingTop="20dp"
      android:paddingEnd="16dp"
      android:paddingBottom="20dp"
      android:text="@string/developer_options_math_expressions"
      android:textColor="@color/component_color_shared_primary_dark_text_color" />

  </LinearLayout>
</layout>
